--- a/mercadoLiebre/public/css/styles.css
+++ b/mercadoLiebre/public/css/styles.css
@@ -18,15 +18,26 @@ header {
 }
 
 .logo{
-    width: 50%;
+    width: 20%;
     padding: 10px;
 }
 
 .buscador{
-    width: 50%;
-    padding: 5px;
+    position: relative;
+    color: #333;
+    font-size: 16px;
+    margin: 0;
+    font-family: inherit;
+    border-radius: 2px;
+    background-color: #fff;
     display: flex;
-    align-items: center;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
+    height: 40px;
+    width: 30%;
+    padding: 10px 60px 10px 15px;
+    border-style: solid;
+    border-color: rgba(0,0,0,0);
+    border-width: 1.5px;
 }
 
 header p {
@@ -57,13 +68,13 @@ header nav ul {
 
 header .buscador .input{
     background-color: #FFF;
-    border: 1px solid #000;
+    border: 1px  #000;
     color: #666;
 }
 
 header .buscador .lupa i{
     background-color: #FFF;
-    border: 1px solid #000;
+    border-left: 1px #000;
     color: #666;
 }
 
@@ -167,7 +178,7 @@ article .info-article i{
     padding: 0;
 }
 
-main article div i {
+main section article div i {
     display: block;
     font-size: 16px;
     padding: 5px;
@@ -181,8 +192,72 @@ main article div i {
     top: -15px;
 }
 
+.desc-prod {
+    display: none;
+}
+
+#formulario-registro{
+    background-color: #ebebeb;
+    width: 100%;
+}
+
+#formulario-login{
+    background-color: #ebebeb;
+    width: 100%;
+}
+
+.formularios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+form div{
+    margin-bottom: 10px;
+    border-radius: 5%;
+}
+
+.text-field{
+    padding: 5px;
+    border-radius: 2%;
+    width: 25vw;
+    border: 2px solid #1259c3;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.selecciones{
+    display: flex;
+    flex-direction: column;
+}
+
+.botonForm{
+    width: 55%;
+}
+
+.botonSubmit{
+    background-color: #1259c3;
+    color: #FFF;
+    width: 20vw;
+}
+.botonReset{
+    background-color: #1259c3;
+    color: #FFF;
+    width: 20vw;
+}
+.botonLogIn{
+    background-color: #1259c3;
+    color: #FFF;
+    width: 20vw;
+}
+
 @media (min-width: 361px) {
-    
+    .logo{
+        width: 50%;
+        padding: 10px;
+    }
     .productos {
         display: flex;
         flex-wrap: wrap;
