--- a/mercadoLiebre/views/home.html
+++ b/mercadoLiebre/views/home.html
@@ -40,10 +40,10 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="#">Creá tu cuenta</a>
+                        <a href="/register">Creá tu cuenta</a>
                     </li>
                     <li>
-                        <a href="#"> Ingresá</a>
+                        <a href="/login"> Ingresá</a>
                     </li>
                     <li>
                         <a href="#">Mis Compras</a>
