--- a/mercadoLiebre/views/login.html
+++ b/mercadoLiebre/views/login.html
@@ -58,7 +58,8 @@
         </header>
 
         <main class="formulario-login">
-            <div class="formularios">
+            
+            <form class="formularios-login" action="/" method="GET">
                 <div>
                     <input class="text-field" type="email" name="email" placeholder="E-mail">
                 </div>
@@ -68,7 +69,7 @@
                 <div>
                     <button class="botonForm botonLogIn" type="submit">Log In</button>
                 </div>
-            </div>
+            </form>
         </main>
     
         <footer>
