--- a/mercadoLiebre/public/css/styles.css
+++ b/mercadoLiebre/public/css/styles.css
@@ -14,11 +14,11 @@ header {
 .top-header{
     display: flex;
     flex-wrap: wrap;
-    padding: 5%;
+    padding: 0.5%;
 }
 
 .logo{
-    width: 20%;
+    width: 50%;
     padding: 10px;
 }
 
@@ -33,7 +33,7 @@ header {
     display: flex;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.2);
     height: 40px;
-    width: 30%;
+    width: 20%;
     padding: 10px 60px 10px 15px;
     border-style: solid;
     border-color: rgba(0,0,0,0);
@@ -70,12 +70,17 @@ header .buscador .input{
     background-color: #FFF;
     border: 1px  #000;
     color: #666;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 header .buscador .lupa i{
     background-color: #FFF;
     border-left: 1px #000;
     color: #666;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 header div.burger-menu i {
@@ -214,6 +219,14 @@ main section article div i {
     margin-top: 25px;
 }
 
+.formularios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
 form div{
     margin-bottom: 10px;
     border-radius: 5%;
@@ -253,11 +266,12 @@ form div{
     width: 20vw;
 }
 
+.foter{
+    flex-wrap: wrap;
+    height: 10%;
+}
+
 @media (min-width: 361px) {
-    .logo{
-        width: 50%;
-        padding: 10px;
-    }
     .productos {
         display: flex;
         flex-wrap: wrap;
@@ -273,7 +287,7 @@ form div{
         display: flex;
         justify-content: space-between;
     }
-    header nav {
+    header nav{
         display: flex;
         justify-content: space-between;
     }
@@ -283,6 +297,10 @@ form div{
 }
 
 @media (min-width: 769px) {
+    .logo {
+        width: 20%;
+        padding: 10px;
+    }
     main section article {
         width: 22.5%;
     }
@@ -293,7 +311,9 @@ form div{
         display: none;
     }
     article:hover .description {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
+        transition: all 2s;
     }
     article:hover {
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
