--- a/mercadoLiebre/views/home.html
+++ b/mercadoLiebre/views/home.html
@@ -17,7 +17,7 @@
                 <img class="logo" src="/img/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="350px">
                 
                 <div class="buscador">
-                    <div class="input">Buscar prodcutos, marcas</div>
+                    <div class="input">Buscar productos, marcas</div>
                     <div class="lupa"><i class="fa fa-search"></i></div>
                 </div>
             </div>
@@ -69,36 +69,44 @@
                         <img src="/img/img-cafetera-moulinex.jpg" alt="prod" width="350px">
                         <div class="info-article">
                                 <i class="fas fa-truck"></i>
+                            <div class="description">
                                 <p class="precio">$6.770</p>
                                 <p class="descuento">40% OFF</p>
                                 <h4>Cafetera Moulinex</h4>
+                            </div>
                         </div>
                     </article>
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="prod" width="350px">
                         <div class="info-article">
                             <i class="fas fa-truck"></i>
-                            <p class="precio">$230.000</p>
-                            <p class="descuento">20% OFF</p>
-                            <h4>MacBook Pro 2019</h4>
+                            <div class="description">
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% OFF</p>
+                                <h4>MacBook Pro 2019</h4>
+                            </div>
                         </div>    
                     </article>
                     <article>
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="prod" width="350px">
                         <div class="info-article">
                             <i class="fas fa-truck"></i>
-                            <p class="precio">$70.500</p>
-                            <p class="descuento">10% OFF</p>
-                            <h4>Samsung Galaxy S10</h4>
+                            <div class="description">    
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% OFF</p>
+                                <h4>Samsung Galaxy S10</h4>
+                            </div>   
                         </div>
                     </article>
                     <article>
                     <img src="/img/img-tv-samsung-smart.jpg" alt="prod" width="350px">
                     <div class="info-article">
                         <i class="fas fa-truck"></i>
-                        <p class="precio">$23.200</p>
-                        <p class="descuento">5% OFF</p>
-                        <h4>SmarTv Samsung 43"</h4>
+                        <div class="description">
+                            <p class="precio">$23.200</p>
+                            <p class="descuento">5% OFF</p>
+                            <h4>SmarTv Samsung 43"</h4>
+                        </div>
                     </div>
                     </article>
                 </div>
@@ -110,36 +118,44 @@
                     <img src="/img/img-cafetera-moulinex.jpg" alt="prod" width="350px">
                     <div class="info-article">
                         <i class="fas fa-truck"></i>
-                        <p class="precio">$6.770</p>
-                        <p class="descuento">40% OFF</p>
-                        <h4>Cafetera Moulinex</h4>
+                        <div class="description">
+                            <p class="precio">$6.770</p>
+                            <p class="descuento">40% OFF</p>
+                            <h4>Cafetera Moulinex</h4>
+                        </div>
                     </div>
                     </article>
                     <article>
                     <img src="/img/img-macbook-pro-2019.jpg" alt="prod" width="350px">
                     <div class="info-article">
                         <i class="fas fa-truck"></i>
-                        <p class="precio">$230.000</p>
-                        <p class="descuento">20% OFF</p>
-                        <h4>MacBook Pro 2019</h4>
+                        <div class="description">
+                            <p class="precio">$230.000</p>
+                            <p class="descuento">20% OFF</p>
+                            <h4>MacBook Pro 2019</h4>
+                        </div>
                     </div>    
                     </article>
                     <article>
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="prod" width="350px">
                     <div class="info-article">
                         <i class="fas fa-truck"></i>
-                        <p class="precio">$70.500</p>
-                        <p class="descuento">10% OFF</p>
-                        <h4>Samsung Galaxy S10</h4>
+                        <div class="description">
+                            <p class="precio">$70.500</p>
+                            <p class="descuento">10% OFF</p>
+                            <h4>Samsung Galaxy S10</h4>
+                        </div>
                     </div>
                     </article>
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="prod" width="350px">
                         <div class="info-article">
                             <i class="fas fa-truck"></i>
-                            <p class="precio">$23.200</p>
-                            <p class="descuento">5% OFF</p>
-                            <h4>SmarTv Samsung 43"</h4>
+                            <div class="description">
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% OFF</p>
+                                <h4>SmarTv Samsung 43"</h4>
+                            </div>
                         </div>
                         </article>
                 </div>
@@ -147,7 +163,7 @@
         </main>
     
         <footer>
-            <section>
+            <section class="foter">
                 <div class="figura"><i class="fas fa-credit-card"></i></div>
                 <div class="footer-padding">         
                     <h4>Pagá con tarjeta o en efectivo</h4>
@@ -156,7 +172,7 @@
                     <p>pago. ¡Y siempre es seguro!</p>
                 </div>
             </section>
-            <section>
+            <section class="foter">
                 <div class="figura"><i class="fas fa-gift"></i></div>
                 <div class="footer-padding">
                         <h4>Envío gratis desde $ 2.500</h4>
@@ -165,7 +181,7 @@
                         <p>un beneficio de Mercado Puntos.</p>
                 </div>
             </section>
-            <section>
+            <section class="foter">
                 <div class="figura"><i class="fas fa-user-shield"></i></div>
                 <div class="footer-padding">
                     <h4>Seguridad, de principio a fin</h4>
@@ -174,7 +190,7 @@
                     <p>siempre protegid@.</p>
                 </div>
             </section>
-                <div class="footer-padding">
+                <div class="footerCopy">
                     <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
                 </div>
         </footer>
